# dynautomate

./: .gitignore  404.html  LICENSE  README.md  dynautomate.py  index.html  keyfile.py  mkdocs.yml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  publish_pypi.yml
arraykeyword/: index.html
cards/: index.html
docs/: arraykeyword.md  cards.md  index.md  keyfile.md  keyword.md  nodes.md  transform.md
dynautomate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
keyfile/: index.html
keyword/: index.html
search/: search_index.json
site/: 404.html  index.html
site/keyfile/: index.html
site/search/: search_index.json
src/dynautomate/: ArrayKeyword.py  __init__.py  card.py  find_nth_comma.py  is_float.py  keyfile.py  keywordclass.py  nodes.py  transformation.py
src/dynautomate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
transform/: index.html
