[metadata]
name = dynautomate
version = 0.1.1
author = Turner Jennings
author_email = turner.jennings@outlook.com
description = Automated workflow for LS-DYNA keyword editing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnerjennings/dynautomate
license = MIT

[options]
packages = find:
python_requires = >=3.10